--- a/src/content/docs/dev-talk/when-bookmarks-become-noise.mdx
+++ b/src/content/docs/dev-talk/when-bookmarks-become-noise.mdx
@@ -1,15 +1,16 @@
 ---
-title: "书签过载问题"
+title: "网页书签信息过载问题"
 ---
 
 ## 方案前置
 
-我的当前方案： 
+每年备份一次书签，用AI编写导出的源代码进行整理，保存在常用的云端产品，需要时再导入浏览器使用。
 
-1. 静态文档做成自用导航页（因即时性过差，保存起来不高效，也不方便，已放弃）
-1. zen + raindrop + notion + floccus （折中，妥协）
+辅助工具：TabMark、懒猫书签整理、LinkMap、坚果云
 
-书签也只能作为等于 Github Repo 不时常常去维护更新，待合适的时机分享合适的人。
+分享的话，可参考 notion ai 生成的网页标签表格样式，我没精力折腾了，所以没做这工具。[组件世界(NotionPet) - 书签混乱不堪？12 个最佳网页书签管理器评测推荐](https://zhuanlan.zhihu.com/p/682683896)
+文章内容其中也说了：“这类工具最近太多了，快要成为独立开发者必做的项目了”。
+
 
 ## 核心痛点剖析
 
@@ -19,8 +20,5 @@ title: "书签过载问题"
 
 有点用浏览器、标签页、独立程序替代，可终究是治标不治本，产生的数字垃圾越来越多，数字花园成了数字垃圾填埋场。打着“为用户提供来自全网真实、实时的消费决策支持，致力成为千万用户热爱的兴趣消费指南”。虽然行为和理念不冲突，可还是夹杂着许多噪音混淆了不少视听，也增加了用户选择时间成本，不过也是种必然。
 
-因以上种种现状，所以我最终选择了文章开头前面所提到的折中方案。
 
-
-
-
+最后，[如卷青年-天翊 - 换了10个笔记软件后，我发现了知识管理的残酷真相](https://www.bilibili.com/video/BV1c3igBpE5W),跟我阐述的观点逻辑大体趋同，从视频作者的话语里，也给我了一些启发。书签管理本质上也是知识管理，在即时性与非即时性之间，找到平衡。
